--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     </div>
     <div id="end-game-container" class="end-game-container"></div>
   </div>
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
 </body>
 </html>
